Revert "Remove superfluous opening of java.xml/jdk.xml.internal"
This reverts commit 697f82733b6c58a6bc6cf740cdb017b8b708c659.